--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,32 +1,35 @@
+// Module-level build.gradle (Groovy)
 apply plugin: 'com.android.application'
 
 android {
-  namespace 'com.example.minimalapp'
-  compileSdk 35
+    namespace 'com.example.minimalapp'
+    compileSdk 35
 
-  defaultConfig {
-    applicationId 'com.example.minimalapp'
-    minSdk 26
-    targetSdk 35
-    versionCode 1
-    versionName '1.0'
-  }
-  
-  buildTypes {
-    release {
-    }
-    debug {
-    }
-  }
+    defaultConfig {
+        applicationId 'com.example.minimalapp'
+        minSdk 26
+        targetSdk 35
+        versionCode 1
+        versionName '1.0'
 
-  compileOptions {
-    sourceCompatibility JavaVersion.VERSION_17
-    targetCompatibility JavaVersion.VERSION_17
-  }
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
 }
 
 dependencies {
-  implementation 'androidx.appcompat:appcompat:1.7.0'
-  implementation 'com.google.android.material:material:1.12.0'
-  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
